--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <button class="result_btn">
                 Ver Resultado
             </button>
+            <span class="alert">Preencha todas as questões para calcular o resultado</span>
         </section>
 
         <!-- Result Box -->
