--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <script src="./js/questions.js" defer></script>
     <script src="./js/main.js" defer></script>
     <script src="./js/headerScroll.js" defer></script>
-    <script src="./js/carrosel.js" defer></script>
 </head>
 
 <body>
@@ -98,28 +97,7 @@
             </div>
             <br />
             <form class="question_list">
-                <!-- <div class="question" id="1">
-                    <span class="question_description">
-                        1. Caracterize o seu estilo pessoal atual (de acordo com o seu conhecimento atual sobre o
-                        assunto
-                    </span>
-                    <div class="options">
-                        <div class="option">
-                            <input type="radio" id="question-1" name="question-1" value="pratica">
-                            <label for="dewey">Prática</label>
-                        </div>
-                        <div class="option">
-                            <input type="radio" id="question-1" name="question-1" value="discreta">
-                            <label for="dewey">Discreta</label>
-                        </div>
-                        <div class="option">
-                            <input type="radio" id="question-1" name="question-1" value="sofisticada">
-                            <label for="dewey">Sofisticada</label>
-                        </div>
-                    </div>
-
-                </div> -->
-
+                <!-- Dados são preenchidos via script -->
             </form>
 
             <button class="result_btn">
@@ -133,86 +111,7 @@
             <div class="container">
                 <h3>Estes são seus principais estilos</h3>
                 <div class="contents">
-                    <!-- <div class="style_box">
-                        <h4>${style.name}</h4>
-                        <div class="description_result">
-                            <div>
-                                <strong>Palavras Chave: </strong>
-                                <span>Lorem, ipsum.</span>
-                            </div>
-                            <div>
-                                <strong>Mensagem: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Profissão: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Design: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Cores: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Maquiagem: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Cabelo: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Acessórios: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                        </div>
-                        <div class="images_result">
-                            <img src="./assets/images/esportivo_1.png" alt="imagem">
-                        </div>
-                    </div>
-                    <div class="style_box">
-                        <h4>${style.name}</h4>
-                        <div class="description_result">
-                            <div>
-                                <strong>Palavras Chave: </strong>
-                                <span>Lorem, ipsum.</span>
-                            </div>
-                            <div>
-                                <strong>Mensagem: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Profissão: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Design: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Cores: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Maquiagem: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Cabelo: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                            <div>
-                                <strong>Acessórios: </strong>
-                                <span>Lorem ipsum dolor sit amet.</span>
-                            </div>
-                        </div>
-                        <div class="images_result">
-                            <img src="./assets/images/esportivo_1.png" alt="imagem">
-                        </div>
-                    </div> -->
+                    <!-- Dados preenchidos via script -->
                 </div>
 
             </div>
