Add message form

--- a/index.html
+++ b/index.html
@@ -57,15 +57,6 @@
                 </p>
             </div>
             <div class="content">
-                <div class="text">
-                    <h3>Preencha o formulário e receba informações sobre como ficar mais bonita</h3>
-                    <p>
-                    </p>
-                    <a href="#contact">
-                        <i class="fas fa-fan"></i>
-                        <span>Formulário</span>
-                    </a>
-                </div>
                 <div class="image">
                     <img src="./assets/images/image-home.svg" alt="Imagem Escolhendo Roupa">
                 </div>
@@ -121,7 +112,7 @@
         <section class="contact" id="contact">
             <div class="title">
                 <h2>Contato</h2>
-                <p>Entre em contato conosco para saber mais detalhes</p>
+                <p>Preencha o formulário para receber mais informações</p>
             </div>
             <div class="row">
                 <div class="image">
@@ -139,8 +130,11 @@
                         <!-- <input type="hidden" name="_cc" value="lpp3tres@gmail.com" /> -->
 
                         <!-- Resposta automatica para o cliente -->
-                        <input type="hidden" name="_autoresponse"
-                            value="Recebi sua mensagem, obrigado por acessar nosso site, te responde o mais rápido possível 😊😊😊!">
+                        <input type="hidden" name="_autoresponse" value="
+                            Obrigada por acessar o nosso site. Ficou feliz com o resultado da avaliação de estilo? Se você quiser aprender mais sobre imagem e estilo, moda, beleza interior e exterior, transições de estilo e como a Beleza Cura siga meu perfil no Instagram. Tem muita coisa boa sendo ensinada por lá. Aguardo você no @belezacura.
+                            Beijos😘,
+                            Paula Serman
+                        ">
                         <!-- Esconder o filtro de spam da FormSubmit -->
                         <!-- <input type="hidden" name="_captcha" value="false" /> -->
 
