--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="form-container">
-                    <form action="https://formsubmit.co/trafego@belezacura.com.br" method="POST">
+                    <form action="https://formsubmit.co/contato@belezacura.com.br" method="POST">
                         <!-- Inputs de logica do FormSubmit -->
                         <!-- Pagina com Menssagem de Sucess -->
                         <!-- <input type="hidden" name="_next"
