--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="content">
                 <div class="image">
-                    <img src="./assets/images/image-home.svg" alt="Imagem Escolhendo Roupa">
+                    <img src="./assets/images/logo-paula-serman.png" alt="Imagem Paula Serman">
                 </div>
             </div>
         </section>
@@ -143,7 +143,7 @@
                         <input type="text" name="name" placeholder="Nome Completo" required />
                         <input type="email" name="email" placeholder="Digite seu e-mail" required />
                         <input type="tel" name="telephone" placeholder="Telefone" required />
-                        <textarea name="message" placeholder="Messagem" required></textarea>
+                        <textarea name="message" placeholder="Mensagem" required></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
