--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beleza Cura - Questionário</title>
+    <title>Beleza Cura - Questionário de Estilo</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Fonts Google -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
