Styling scroll page

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <h2>Questionário de avaliação de Estilo</h2>
                 <p>
                     Conhecer nosso estilo é um passo fundamental na construção da nossa imagem exterior, aquela que
-                    revela quem nós somos por dentro, ou seja, nossa imagem interior. Utilizamos o questionário de
-                    estilo baseado na classificação dos sete estilos universais da Alyce Parsons. Vamos descobrir seu
-                    estilo? Para isso você responde às questões abaixo e, como resultado, você terá os seus três estilos
-                    principais. É importante verificar se o resultado condiz com o seu desejo de imagem. Caso não seja
-                    condizente, é preciso fazer um ajuste na sua imagem e estilo.
+                    revela quem nós somos por dentro. Vamos descobrir o seu estilo pessoal?
+                    Para isso, disponibilizei um questionário simples baseado nos 7 estilos universais de Alice Parsons.
+                    O resultado indicará os seus 3 estilos predominantes e é importante verificar se o resultado condiz
+                    com o seu desejo de imagem. Caso contrário, é fundamental fazer ajustes para transmitir a mensagem
+                    não-verbal correta.
                 </p>
             </div>
             <div class="content">
@@ -66,23 +66,19 @@
         <section class="quiz" id="quiz">
             <div class="title">
                 <h2>Questões</h2>
-                <p>Realize nosso questionário para saber quais os seus principais estilos</p>
+                <p>Responda o questionário para descobrir o seu estilo predominante!</p>
             </div>
             <!-- Info Box -->
             <div class="info_box">
                 <h3>Observações</h3>
                 <div class="info_list">
                     <div class="info">
-                        <strong>1.</strong> Responda todas as perguntas para liberer o botão de resultado.
+                        <strong>1.</strong> Responda todas as perguntas para liberar o botão de resultado.
                     </div>
                     <div class="info">
                         <strong>2.</strong> Ao clicar em &lt;Ver Resultado&gt; você obterá informações sobre os três
                         estilos
                         principais para o seu momento atual.
-                    </div>
-                    <div class="info">
-                        <strong>3.</strong> Caso o resultado não reflita seu desejo de imagem você pode responder
-                        novamente alterando as opções em cada pergunta.
                     </div>
                 </div>
             </div>
@@ -112,7 +108,7 @@
         <section class="contact" id="contact">
             <div class="title">
                 <h2>Contato</h2>
-                <p>Preencha o formulário para receber mais informações</p>
+                <p>Preencha o formulário para receber mais informações sobre beleza, imagem e estilo.</p>
             </div>
             <div class="row">
                 <div class="image">
