--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="quiz" id="quiz">
             <div class="title">
                 <h2>Questões</h2>
-                <p>Responda o questionário para descobrir o seu estilo predominante!</p>
+                <p>Responda ao questionário para descobrir o seu estilo predominante!</p>
             </div>
             <!-- Info Box -->
             <div class="info_box">
@@ -112,7 +112,7 @@
             </div>
             <div class="row">
                 <div class="image">
-                    <img src="./assets/images/image-contact.svg" alt="Contact Form Image">
+                    <img src="./assets/images/image-bonequinha-azul.png" alt="Contact Form Image">
                 </div>
 
                 <div class="form-container">
