Finished now goood please

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>
                     Conhecer nosso estilo é um passo fundamental na construção da nossa imagem exterior, aquela que
                     revela quem nós somos por dentro. Vamos descobrir o seu estilo pessoal?
-                    Para isso, disponibilizei um questionário simples baseado nos 7 estilos universais de Alice Parsons.
+                    Para isso, disponibilizei um questionário simples baseado nos 7 estilos universais de Alyce Parsons.
                     O resultado indicará os seus 3 estilos predominantes e é importante verificar se o resultado condiz
                     com o seu desejo de imagem. Caso contrário, é fundamental fazer ajustes para transmitir a mensagem
                     não-verbal correta.
